--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open sans", sans-serif;
+  font-family: 'Open sans', sans-serif;
 }
 
+html,
+body {
+  background-color: #e8e8e8;
+}
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
+
+header {
+  background-color: #4d41c0;
+  color: #ffff;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between  ;
+}
