--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --bg-gray: #ddd;
   --color-primary: #4d41c0;
   --white: #fff;
+  --text-gray: #4a4a4a;
 }
 
 * {
@@ -62,4 +63,47 @@ nav a {
 }
 .dsmovie-contact-container img {
   margin-right: 10px;
+}
+
+.dsmovie-card {
+  width: 360px;
+}
+
+#dsmovie-card-list {
+  padding: 40px 0;
+  
+}
+
+.dsmovie-card img {
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description {
+  padding: 10px 0 20px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--white);
+  border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-card-description h3 {
+  margin-bottom: 25px;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.dsmovie-btn,
+.dsmovie-btn:hover {
+  width: 180px;
+  height: 40px;
+  background-color: var(--color-primary);
+  color: var(--white);
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
