--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ nav a {
 }
 
 .dsmovie-card {
-  width: 360px;
+  width: 100%;
 }
 
 #dsmovie-card-list {
@@ -107,3 +107,4 @@ nav a {
   justify-content: center;
   align-items: center;
 }
+
