--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --color-primary: #4d41c0;
   --white: #fff;
   --text-gray: #4a4a4a;
+  --text-light-gray: #aaa
 }
 
 * {
@@ -106,9 +107,46 @@ nav a {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 0;
 }
 
 .dsmovie-form-container {
   padding: 40px 0;
   max-width: 480px;
+}
+
+.dsmovie-form{
+  width: 100%;
+}
+
+.dsmovie-form-group{
+  margin-bottom: 20px;
+}
+
+.dsmovie-form-group label{
+  font-size: 12px;
+  color: var(--text-light-gray);
+}
+
+.dsmovie-form-description{
+  background-color: var(--white);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-form-description h3{
+  font-size: 13px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.dsmovie-form-btn-container{
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
