--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
   --color-primary: #4d41c0;
   --white: #fff;
   --text-gray: #4a4a4a;
-  --text-light-gray: #aaa
+  --text-light-gray: #aaa;
+  --star-yellow: #ffbb3a;
 }
 
 * {
@@ -85,6 +86,7 @@ nav a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   background-color: var(--white);
   border-radius: 0 0 8px 8px;
 }
@@ -93,6 +95,31 @@ nav a {
   margin-bottom: 25px;
   font-size: 14px;
   font-weight: 700;
+}
+
+.dsmovie-card-description-bottom{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dsmovie-card-description-bottom img{
+  width: 22px;
+}
+
+.stars {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 22px;
+  font-weight: 700;
+  color: var(--star-yellow);
+  
+}
+.dsmovie-card-description-bottom p{
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--text-light-gray);
 }
 
 .dsmovie-btn,
@@ -112,7 +139,7 @@ nav a {
 
 .dsmovie-form-container {
   padding: 40px 0;
-  max-width: 480px;
+  max-width: 600px;
 }
 
 .dsmovie-form{
@@ -138,7 +165,7 @@ nav a {
 }
 
 .dsmovie-form-description h3{
-  font-size: 13px;
+  font-size: 20px;
   font-weight: 700;
   margin-bottom: 20px;
 }
